# TCN-MAGE

./: .gitignore  NYC_Weather_2016_2022.csv  README.md  best_model_LSTMModel.pth  best_model_TCN.pth  causal_conv1d.c  causal_conv1d.h  commands.txt  main.c  python_example.py  tcn_model.onnx  tcn_model.pth  tcn_train_debug.py  tcn_vs_lstm.py  utils.h
C/: tcn.h  utils.c
Python/: NYC_Weather_2016_2022.csv  best_model_TCN.pth  tcn_model.onnx  tcn_train_debug.py
STATIC_c/: CMakeLists.txt  main.c
c/: main.c
c_example/: CMakeLists.txt  causal_conv1d.c  causal_conv1d.h  main.c  output.txt  tcn.c  tcn.h  tcn_layer.c  tcn_layer.h  tcn_model  tcn_model.c  tcn_network  tcn_network.c  utils.c
c_example_2/: conv1d.c  main.c  tcn_network.c
dma_transfer/int32/: mage_dma_int32.h
even_odd/: input_output.h  tcn_network_params.h  weights_bias_int16.h  weights_bias_int32.h  weights_bias_int8.h
mage_kernels/: mage_tcn_parameters.h
mage_kernels/int32/: mage_int32_0.h  mage_int32_1.h  mage_int32_2.h  mage_int32_3.h  mage_int32_4.h  (+2 more)
mnist/: mnist_config.json  trainMNIST.py
model_train/: tcn_model.py  train_tcn.py.py
static_c/: main
static_ch/: best_model_TCN.pth  tcn_model.onnx  tcn_train_debug.py
static_ie/: input_output.h  main  main.c  main.h  tcn_input_output_int16.h  tcn_input_output_int8.h  tcn_network_params.h  tcn_weights_float32.h  weights_bias_int16.h  weights_bias_int32.h  weights_bias_int8.h
test/: main  main.c
training/: best_model_TCN.pth  tcn_train_debug.py  train.py
weights/: display.py
xheep/: main  main.c  main.h  tcn_network_params.h
(+600 files in other folders)
